# vietlott-data

./: .gitignore  README.md  pyproject.toml  update_data.py
.github/workflows/: update-data.yml
data/: lotto535.jsonl  max3d.jsonl  max3d_pro.jsonl  power645.jsonl  power655.jsonl
src/: __init__.py  config.py
src/crawler/: __init__.py  vietlott.py
